Fix: Style #screen-border element to replace border on #screen so elements can overlap with border

--- a/style.css
+++ b/style.css
@@ -15,10 +15,20 @@ body {
     width: 300px;
 }
 
-#screen {
-    background-color: #fff;
-    height: 420px;
-    margin: 30px 20px;
+#screen-border {
+    background-color: #212529;
+    border-radius: 6px;
+    height: 440px;
+    margin: 20px 20px;
     position: absolute;
     width: 260px;
+}
+
+#screen {
+    background-color: #fff;
+    height: 380px;
+    margin-left: 5px;
+    margin-top: 25px;
+    position: absolute;
+    width: 250px;
 }
